# s2-geometry-library

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  benchmarks
geometry/: .gitignore  CMakeLists.txt  Makefile  s1angle_test.cc  s1interval_test.cc  s2.cc  s2.h  s2_test.cc  s2cap_test.cc  s2cell_test.cc  s2cellid.h  s2cellid_test.cc  s2cellunion_test.cc  s2edgeindex_test.cc  s2edgeutil_test.cc  s2latlng_test.cc  s2latlngrect_test.cc  s2loop.cc  s2loop_test.cc  s2pointregion_test.cc  s2polygon.cc  s2polygon_test.cc  s2polygonbuilder.cc  s2polygonbuilder_test.cc  s2polyline_test.cc  s2r2rect_test.cc  s2regioncoverer.cc  s2regioncoverer_test.cc  s2regionunion_test.cc
geometry/base/: port.h
geometry/strings/: split.cc  split.h  strutil.cc  strutil.h
